project(SBE-gameframework)

file(GLOB PROJECT_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

file(GLOB PROJECT_SOURCES_CONTENT
	${CMAKE_CURRENT_SOURCE_DIR}/Content/*.cpp
)

list(APPEND PROJECT_SOURCES ${PROJECT_SOURCES_CONTENT})

if(SBE_SINGLE_BINARY)
	set(LIB_TYPE STATIC)
else()
	set(LIB_TYPE MODULE)
endif()

add_library(${PROJECT_NAME} ${LIB_TYPE} ${PROJECT_SOURCES} ${PROJECT_SOURCES_PLATFORM})

if(OPENF3_ENABLE_PHASE1_BOOTSTRAP)
	target_compile_definitions(${PROJECT_NAME}
		PRIVATE OPENF3_ENABLE_PHASE1_BOOTSTRAP
	)
endif()

if(NOT SBE_SINGLE_BINARY)
	set_target_properties(${PROJECT_NAME} PROPERTIES
		OUTPUT_NAME "SbGameFramework"
	)
	
	#target_link_libraries(${PROJECT_NAME} SBE-idlib)
endif()